--- a/index.html
+++ b/index.html
@@ -145,15 +145,16 @@ footer svg {
               Press a tab above to learn more. <br />
               We suggest beginners start with Install/Support and continue to the right. 
               </h2>
+              <p>All the features you have been waiting for!  Highlights, chat logs, configurable profanity/word chat filters, and more!</p>
 
               <figure>
                 <img src="desktop.png" class="example" alt="What KickstarrTV looks like on a Kick live stream on a laptop" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a laptop 4/15/23. <br />We are not associated with this channel, this is a typical example stream on Kick. <br /> Thank you to Kai N Speed and check them out if you like this. </figcaption>
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a laptop 4/15/23. <br />We are not associated with this channel, this is a typical example stream on Kick. <br /> Thank you to LovelyAlohi and check them out if you like this. </figcaption>
               </figure>
               <hr />
               <figure>
                 <img src="mobile.png" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone 4/15/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br />Thank you to Kai N Speed and check them out if you like this.</figcaption>
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone 4/15/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br />Thank you to LovelyAlohi and check them out if you like this.</figcaption>
               </figure>
               <p>
               Please check out these featured streamers below that are using KickstarrTV!
@@ -176,7 +177,7 @@ footer svg {
                   <li>download the zip file and upzip it</li>
                   <li>open your web browser and at chrome://extensions/ (example address)</li>
                   <li>click "Load Unpacked" and select the folder you just unzipped</li>
-                  <li>you should see Rambler 1.0.0 active on this screen.</li>
+                  <li>you should see KickStarr 1.0.0 active on this screen.</li>
                   <li>questions? look up installing browser extensions on Chrome, the process is the same for all.</li>
                 </ol>
 
@@ -187,12 +188,12 @@ footer svg {
                   <li>download the zip file</li>
                   <li>open your web browser and at kiwi://extensions/ (example address)</li>
                   <li>click "load zip/crx" and select the download you just saved</li>
-                  <li>you should see Rambler 1.0.0 active on this screen.</li>
+                  <li>you should see KickStarr 1.0.0 active on this screen.</li>
                   <li>questions? look up installing browser extensions on Android, the process is the same for all.</li>
                 </ol>
 
                 <h3>Why isn't this on the Chrome Web Store?</h3>
-                <p>We believe in the true open-source nature of this project and idea. Upon downloading, you or someone you trust can inspect the code for anything malicious. You can modify it to suit your needs. You or someone you know are probably smarter than I and can take this and improve upon it. This exists to be an open place of stream ideas in which people can add or subtract to and progress upon. With is as our motto, the best way seemingly to accomplish this is to provide it like this.</p>
+                <p>We believe in the true open-source nature of this project and idea. Upon downloading, you or someone you trust can inspect the code for anything malicious. You can modify it to suit your needs. You or someone you know are probably smarter than I and can take this and improve upon it. This exists to be an open place of stream ideas in which people can add or subtract to and progress upon. With is as our motto, the best way seemingly to accomplish this is to provide it like this so that people better than I can take it and improve upon it to their own needs. I have nothing to hide.</p>
 
                 <h3>Don't like it?</h3>
                 <p>If you do not like it, you can disable or uninstall it with no issues. All features can be turned on and off individually -- you choose which you want to use and how.</p>
@@ -257,7 +258,7 @@ footer svg {
                 <h5>Load an active livestream with chat on Kick</h5>
                 if this is working, you will see loading messages pop up in the bottom right hand corner of the screen.<br />
                 in the top right corner of your browser, you will see either a puzzle piece icon or a green keyboard icon. Click on it.<br />
-                if puzzle piece, click on the pin icon next to the Rambler green keyboard icon.<br />
+                if puzzle piece, click on the pin icon next to the KickStarr green keyboard icon.<br />
                 if you see the green keyboard icon, click on it to toggle the extension Main Menu.<br />
 
                 <h5>Main Menu</h5>
@@ -280,7 +281,8 @@ footer svg {
                 <li>the up arrow is to scroll to the top of the live chat</li>
                 <li>the down arrow is to scroll to the bottom of the live chat</li>
                 <li>the aA is to change the font size of chat</li>
-                <li>the * sign is to toggle full height and/or full weight of chat sidebar</li>
+                <li>the left arrow is to toggle full weight of chat sidebar</li>
+                <li>the up arrow is to toggle full height of video and chat sidebar</li>
                 <li>the magnifying glass brings up the Search Menu to toggle searching of the current stream chat</li>
                 <li>the magnifying glass + brings up the Search Menu to toggle searching of all saved stream chats on this device from Kick</li>
                 </ul>
@@ -326,13 +328,17 @@ footer svg {
                   <option>highlight moderator messages color in this color</option>
                   <option>highlight @ mention messages color in this color</option>
                   <option>highlight hashtag messages color in this color</option>
-                  <option>highlight VIP messages in this color and larger font</option>
+                  <option>highlight VIP/Verified messages in this color and larger font</option>
                   <option>personal VIP List </option>
                   <option>highlight these words in chat in larger font</option>
+                  <option>highlight founder messages</option>
+                  <option>highlight OG messages</option>
+                  <option>highlight owner messages</option>
+                  <option>highlight gifter messages</option>
                 </select>
 <hr>
                 <select>
-                  <option>Mute/Dim ↓ (you can change)</option>
+                  <option>Mute/Dim ↓ (you choose)</option>
                   <option>mute non moderator/sub messages in chat</option>
                   <option>mute owner/streamer messages in chat</option>
                   <option>mute @ mention messages in chat</option>
@@ -342,7 +348,7 @@ footer svg {
                 </select>
 <hr>
                 <select>
-                  <option>Hide ↓ (you can change)</option>
+                  <option>Hide ↓ (you choose)</option>
                   <option>hide non moderator/sub messages in chat</option>
                   <option>hide owner/streamer messages in chat</option>
                   <option>hide @ mention messages in chat</option>
@@ -350,12 +356,17 @@ footer svg {
                   <option>hide follow alert messages in chat</option>
                   <option>hide subscribe alert messages in chat</option>
                   <option>hide these words in chat</option>
-                  <option>hide chats from these usernames in chat hide website links in chat</option>
-                  <option>hide usernames on screen chat</option>
+                  <option>hide chats from these usernames</option>
+                  <option>hide website links posted in chat</option>
+                  <option>hide usernames in on-screen chat</option>
+                  <option>hide USA English sexual or body words from list in chat.</option>
+                  <option>hide USA English profanity from list in chat.</option>
+                  <option>hide USA English political words from list in chat.</option>
+                  <option>hide USA English negative words from list in chat.</option>
                 </select>
 <hr>
                 <select>
-                  <option>Features ↓ (you can change)</option>
+                  <option>Features ↓ (you choose)</option>
                   <option>turn on basic keybinds for chat commands</option>
                   <option>turn on full keybinds for chat commands</option>
                   <option>turn on saving/logging of stream chat</option>
@@ -479,7 +490,7 @@ When you place your mouse cursor over the chat or emojis, they enlarge in size s
 
 <small> email us: KickstarrTV @ pm.me</small><br>
 
-  <small>This is a independent entity not connected, associated by, owned in part, or funded with or by Kick.com or any parent company. This is a independent entity not connected, associated by, owned in part, or funded with or by any political party, political entity or elected official. Photo by <a href="https://unsplash.com/@jenrielzany?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Zany Jadraque</a> on <a href="https://unsplash.com/photos/YLdC7qO9M3g?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small>
+  <small>This is a independent entity not connected, associated by, owned in part, or funded with or by Kick.com or any parent company. This is a independent entity not connected, associated by, owned in part, or funded with or by any political party, political entity or elected official. Thanks to my Lord Jesus Christ for sustaining me and MelonieMac for the inspiration. Photo by <a href="https://unsplash.com/@jenrielzany?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Zany Jadraque</a> on <a href="https://unsplash.com/photos/YLdC7qO9M3g?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></small>
   <small>This page and content and extension copyright <a href='https://linktr.ee/biolithic' target='_blank'>biolithic</a> 2023. All Rights Reserved.</small>
   <small><a href='tos.html' target='_blank'>Terms of Service</a></small>
   <small><a href='privacypolicy.html' target='_blank'>Privacy Policy</a></small>
