added stream event search

--- a/index.html
+++ b/index.html
@@ -324,9 +324,11 @@ footer svg {
                 <li>When the search menu is active, the main menu icons work on the chat appearing in the search menu overlay</li>
                 <li>When the search menu is hidden, the main menu icons work on the chat appearing in the existing Kick sidebar</li>
                 <li>When the search menu is active, type a phrase in the search bar.</li>
-                <li>The @ button will search saved chat for the phrase starting the message. Search for dog will find "dogs are cute" but NOT "your dog is cute."</li>
-                <li>The user button will search saved chat the user writing the message. Search for dog will find what the username dog wrote in the chat.</li>
-                <li>The abc button will search saved chat for the phrase in the message. Search for dog will find "dogs are cute" AND "your dog is cute."</li>
+
+                <li>The writing hand button will search saved chat for the phrase starting the message. Search for dog will find "dogs are cute" but NOT "your dog is cute."</li>
+                <li>The person button will search saved chat the user writing the message. Search for dog will find what the username dog wrote in the chat.</li>
+                <li>The notes on paper button will search saved chat for the phrase in the message. Search for dog will find "dogs are cute" AND "your dog is cute."</li>
+                <li>The calendar button will find all past stream events like hosts, hosts, gifts, clips and staff visits you have saved from this chat so far.</li>
                 <li>The full button will find all saved messages you have saved from this chat so far.</li>
                 </ul>
 
