added stream event menu

--- a/index.html
+++ b/index.html
@@ -164,9 +164,17 @@ footer svg {
               <hr />
               <figure>
                 <img src="desktop_chat_on_screen.png" class="example" alt="What KickstarrTV looks like on a Kick live stream on a laptop" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a laptop 4/15/23. <br />We are not associated with this channel, this is a typical example stream on Kick. <br /> Thank you to Alfie and check them out if you like this. </figcaption>
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a laptop 5/15/23. <br />We are not associated with this channel, this is a typical example stream on Kick. <br /> Thank you to Alfie and check them out if you like this. </figcaption>
               </figure>
               <hr />
+
+              <figure>
+                <img src="stream_event_menu.png" class="example" alt="What KickstarrTV looks like on a Kick live stream on a laptop" />
+                <figcaption>KickstarrTV stream event menu on a Kick live stream on a laptop 5/22/23. You can toggle a running list of hosts, subs, clips and other events that have happened while this stream is live while watching the current stream. <br />We are not associated with this channel, this is a typical example stream on Kick. <br /> Thank you to nmgprodigy and check them out if you like this. </figcaption>
+              </figure>
+              <hr />
+
+              
 
               <p>
               Please check out these featured streamers below that are using KickstarrTV!
