--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@ footer svg {
               </figure>
               <hr />
 
+              <figure>
+                <img src="desktop_chat_replay.png" class="example" alt="What KickstarrTV looks like on a Kick live stream on a laptop" />
+                <figcaption>KickstarrTV chat replay on a Kick VOD (chat from a video of past live stream) on a laptop 5/22/23. <br />We are not associated with this channel, this is a typical example stream on Kick. <br /> Thank you to Alfie and check them out if you like this. </figcaption>
+              </figure>
+              <hr />
+
+              
+
               
 
               <p>
