finish original documentation

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ footer svg {
     <h1>KickstarrTV</h1>
     <h3>Browser Extension for Kick Livestream Chats</h3>
     <h3>Empowering Streamers and Moderators since 2023!</h3>
-    <button>Coming 6/1/2023</button>
+    <button>Download V.1.0.0</button>
   </div>
 
   <div class="content">
@@ -145,7 +145,62 @@ footer svg {
               Press a tab above to learn more. <br />
               We suggest beginners start with Install/Support tab and continue to the right. 
               </h2>
-              <p>All the features you have been waiting for!  Highlights, theming, chat logs, configurable chat filters, and more!</p>
+              <p>The features you have been waiting for in Kick.com streams!  Highlights, theming, chat logs, configurable chat filters, and more!</p>
+              <p>Features not found on Kick, Twitch, Facebook or Youtube...yet!</p>
+
+              <div class="flex two four-500 six-800 demo">
+                <div class="full half-500 third-800">
+                    <article class="card">
+                      <header>
+                        <h3>3 Reasons to Use Mobile</h3>
+                      </header>
+                      <section>
+                      <ol>
+                        <li>Easy chat filters and mutes to keep up</li>
+                        <li>Tap chat message to reply</li>
+                        <li>Themeable chat for visibility</li>
+                      </ol>
+                      </section>
+                      <footer>
+                      </footer>
+                    </article>
+                </div>
+
+                <div class="full half-500 third-800">
+                    <article class="card">
+                      <header>
+                        <h3>3 Reasons to Use PC</h3>
+                      </header>
+                      <section>
+                      <ol>
+                        <li>Chat logs and replay to save and export</li>
+                        <li>Searchable, customizable chat</li>
+                        <li>Stream Event menu for keeping track of clips, subs, raids, hosts, staff</li>
+                      </ol>
+                      </section>
+                      <footer>
+                      </footer>
+                    </article>
+                </div>
+
+                <div class="full half-500 third-800">
+                    <article class="card">
+                      <header>
+                        <h3>3 Reasons to Use</h3>
+                      </header>
+                      <section>
+                      <ol>
+                        <li>customizable blocked word lists</li>
+                        <li>customizable personal highlight user or word lists</li>
+                        <li>keybinds for chat features like full screen or chat on screen</li>
+                      </ol>
+                      </section>
+                      <footer>
+                      </footer>
+                    </article>
+                </div>
+              </div>
+
 
               <figure>
                 <img src="desktop.png" class="example" alt="What KickstarrTV looks like on a Kick live stream on a laptop" />
@@ -533,56 +588,56 @@ You can make your own share menu to use for your needs. For example, maybe you w
 
               <button id="loadScreenshots" onClick="load_screenshots();">Load screenshot demos</button><br />
               <figure>
-                <img id="screenshot1" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot1" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a Macbook 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a Macbook 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot2" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot2" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a Linux cpu 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a Linux cpu 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot3" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot3" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on an HP Windows PC 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a HP Windows PC 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot4" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot4" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone  5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot5" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot5" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone  5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot6" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot6" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone  5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot7" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot7" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone  5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot8" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot8" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone  5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
 
               <figure>
-                <img id="screenshot9" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone" />
-                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone with the options menu closed 5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
+                <img id="screenshot9" src="#" class="example" alt="What KickstarrTV looks like on a Kick live stream on a mobile phone 5/25/23" />
+                <figcaption>What KickstarrTV looks like on a Kick live stream on a mobile phone  5/25/23. <br />We are not associated with this channel, this is a typical  example stream on Kick. <br /></figcaption>
               </figure>
               <hr />
               
