--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ footer svg {
     <h1>KickstarrTV</h1>
     <h3>Browser Extension for Kick Livestream Chats</h3>
     <h3>Empowering Streamers and Moderators since 2023!</h3>
-    <button>Download V.1.0.0</button>
+    <a class="button" href="kickstarr100.zip">Download V.1.0.0</a>
   </div>
 
   <div class="content">
@@ -216,6 +216,27 @@ footer svg {
               <p>
               Please check out these featured streamers below that are using KickstarrTV!
               </p>
+
+              <h5>
+              Chat Replay Testing
+              </h5>
+              <p>
+                With your browser extension installed, visit one of the following links below. You should see the saved chat populate to the side. Click on a username and go to their channel. Click on a timestamp and fast-forward to that part of the video. Coming soon: chat searching on VODs and stream events menu to make it easier to find moments in pasts stream for clipping or good content. The future is bright and exciting!
+              </p>
+
+
+              <a href="https://kick.com/video/4c107dad-c915-4192-80a8-8e66815f6263">Alfie</a><br />
+              <a href="https://kick.com/video/5a646820-50fb-4b49-b92f-4bea7ff35503">BigE</a><br />
+              <a href="https://kick.com/video/1d120755-43d1-4e2c-9e32-38c3585ecdf7">BigE</a><br />
+
+              <p>The following Kick streamers are being tested for chat replay:</p>
+              <a href="https://kick.com/bige">BigE</a><br />
+              <a href="https://kick.com/MelonieMac">MelonieMac</a><br />
+              <a href="https://kick.com/Azralynn">Azralynn</a><br />
+
+              <p>Let us know if you would like to be on the list.</p>
+
+
             </div>
           </div>
 
