--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ footer svg {
     <h1>KickstarrTV</h1>
     <h3>Browser Extension for Kick Livestream Chats</h3>
     <h3>Empowering Streamers and Moderators since 2023!</h3>
-    <a class="button" href="kickstarr100.zip">Download V.1.0.0</a>
+    <a class="button" href="https://www.streameranalytics.com/kickstarr100.zip">Download V.1.0.0</a>
   </div>
 
   <div class="content">
@@ -233,9 +233,8 @@ footer svg {
               <a href="https://kick.com/bige">BigE</a><br />
               <a href="https://kick.com/MelonieMac">MelonieMac</a><br />
               <a href="https://kick.com/Azralynn">Azralynn</a><br />
-
+              <a href="https://kick.com/Azalea22">Azalea22</a><br />
               <p>Let us know if you would like to be on the list.</p>
-
 
             </div>
           </div>
