--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ footer svg {
     <h1>KickstarrTV</h1>
     <h3>Browser Extension for Kick Livestream Chats</h3>
     <h3>Empowering Streamers and Moderators since 2023!</h3>
-    <a class="button" href="https://www.streameranalytics.com/kickstarr100.zip">Download V.1.0.0</a>
+    <a class="button" href="https://www.streameranalytics.com/kickstarr100.zip">Download V.1.0.0 6/1/2023</a>
   </div>
 
   <div class="content">
@@ -146,7 +146,6 @@ footer svg {
               We suggest beginners start with Install/Support tab and continue to the right. 
               </h2>
               <p>The features you have been waiting for in Kick.com streams!  Highlights, theming, chat logs, configurable chat filters, and more!</p>
-              <p>Features not found on Kick, Twitch, Facebook or Youtube...yet!</p>
 
               <div class="flex two four-500 six-800 demo">
                 <div class="full half-500 third-800">
@@ -587,7 +586,7 @@ Example: you can make custom analytics for yourself by exporting the chats out i
 
 <h5>Import Chats</h5>
 By turning on this feature...<br />
-You can import chats to view or search from other Kick streams, or coming soon, past streams on Twitch, Youtube, or Rumble.<br />
+You can import chats to view or search from other Kick streams or past streams on Twitch, Youtube, or Rumble.<br />
 
 <h5>Share</h5>
 By turning on this feature...<br />
