update for july 2023

--- a/index.html
+++ b/index.html
@@ -357,7 +357,17 @@ Rita <br />
 TaylorStarlight <br />
 xQc <br />
 zSarayu <br />
+
+<p>
+  With your browser extension installed, visit one of the following links below. You should see the saved chat populate to the side. Click on a timestamp and fast-forward to that part of the video. Filter and search chat as usual. Coming soon: better features to make it easier to find moments in pasts stream for clipping or good content for social media. The future is bright and exciting!
+</p>
+<a href="https://kick.com/video/6ad98f7d-4630-46f2-b6e6-04278450af46">One</a><br />
+<a href="https://kick.com/video/43784a01-4a51-4085-9620-207277047444">Two</a><br />
+<a href="https://kick.com/video/75249f77-db09-44fa-bf1a-7178a86c458b">Three</a><br />
+<a href="https://kick.com/video/99a2f9e5-8ad8-4875-8d84-c9da1af5c2ad">Four</a><br />
+
 </div>
+
 
 
 <p>This is generally updated on the weekends so check back for new features and updates if you wish. You can contact us with feature requests or questions. All the best streaming on Kick, long live the web and hope to see in Vegas October 2023 for our Kick streamers party!</p>
