update for october launch

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
 <style>
+body {
+  background: #000;
+}
+.content {
+  background: #fff;
+}
 
 nav {
   background: #000;
