--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ figcaption {
 
 @media all and (max-width: 600px) {
   html, body, main {
-  	height: 100%;
+  	height: auto;
   	padding: 0;
   }
 
@@ -174,8 +174,9 @@ figcaption {
   }
 
   footer.footer {
-    position: fixed;
-    bottom: 0px;
+    position: relative;
+    bottom: auto;
+    height: auto;
   }
 }
 
