update mobile styling

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 body {
   background: #000;
 }
+
 .content {
   background: #fff;
 }
@@ -78,6 +79,7 @@ nav .brand, nav .menu a.pseudo.button {
 
 .splash button.success, .button {
   background: #53FC18;
+  color: #000;
 }
 
 .content {
@@ -114,49 +116,7 @@ nav .brand, nav .menu a.pseudo.button {
   color: #555;
 }
 
-.splash {
-  height: 100vh;
-  width: 100%;
-  background-color: #000;  
-  background: url(background.jpg);
-  text-align: center;
-  color: #53FC18;
-  padding-top: 4rem;
-  background-origin: content-box;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
-.splash button.success, .button {
-  background: #53FC18;
-}
-
-.content {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-body .row img.example {
-  max-width: 300px;
-  margin: 0 auto;
-} 
-
-figcaption {
-  text-align: center;
-}
-
-.row .panel {
-  background-color: lightgreen;
-}
-
-#learnMore1Content, #learnMore2Content, #learnMore3Content {
-  display: none;
-}
-
-#learnMore1Content.show, #learnMore2Content.show, #learnMore3Content.show {
-  display: block;
-}
 
 
 @media all and (max-width: 600px) {
