update marketing site for twitchcon

--- a/index.html
+++ b/index.html
@@ -116,9 +116,6 @@ nav .brand, nav .menu a.pseudo.button {
   color: #555;
 }
 
-
-
-
 @media all and (max-width: 600px) {
   html, body, main {
   	height: auto;
@@ -179,7 +176,7 @@ footer.footer a.icon, footer.footer a.icon img {
 @media all and (max-width: 768px) {
   footer.footer a.icon, footer.footer a.icon img {
     height: 2.5rem;
-      width: 2.5rem;
+    width: 2.5rem;
   }
 
   #contactLinks,
@@ -231,7 +228,8 @@ footer.footer a.icon, footer.footer a.icon img {
           
           <div class="tab">
             <div>
-              <h2>Welcome to the KickStarrTV documentation. <br />
+              <h2>Welcome to the KickStarrTV browser extension documentation. <br />
+              <a href='https://www.eventbrite.com/e/kick-it-live-2023-vegas-tickets-699594896167'>Join us Friday at TwitchCon 2023 for KickItLive2023!</a><br />
               Press a tab above to learn more. <br />
               We suggest beginners start with Install/Support tab and continue to the right. 
               </h2>
@@ -317,11 +315,10 @@ footer.footer a.icon, footer.footer a.icon img {
               <hr />
 
 <p>
-<a href='https://www.eventbrite.com/e/kick-it-live-2023-tampa-tickets-699593562177'>Join us in Tampa FL 2 weekends before TwitchCon 2023 for KickItLive2023!</a><br />
-<a href='https://www.eventbrite.com/e/kick-it-live-2023-dallas-tickets-699594143917'>Join us in Dallas TX the weekend before TwitchCon 2023 for KickItLive2023!</a><br />
-<a href='https://www.eventbrite.com/e/kick-it-live-2023-vegas-tickets-699594896167'>Join us in Vegas TwitchCon week 2023 for KickItLive2023!</a><br />
-<a href="https://www.twitchcon.com/en/las-vegas-2023/" title="Link to TwitchCon 2023 official information">Meet us at TwitchCon 2023 Vegas</a><br />
-
+<a href='https://www.eventbrite.com/e/kick-it-live-2023-vegas-tickets-699594896167'>Join us Friday at TwitchCon 2023 for KickItLive2023!</a><br />
+<a href="https://www.twitchcon.com/en/las-vegas-2023/" title="Link to TwitchCon 2023 official information">Meet us at TwitchCon 2023 Vegas!</a><br />
+</p>
+<p>
 <hr>
 <a href='https://kickstarrapp.github.io/theme_chat.html' title='Theme Builder for On-Screen Chat for Kick'>Resource: Theme Builder for On-Screen Chat</a><br />
 <a href='https://www.streameranalytics.com/kick/3rd-party' title='List of friendly 3rd party vendors for Kick'>Resource: List of friendly 3rd party vendors for Kick</a><br />
