--- a/index.html
+++ b/index.html
@@ -229,7 +229,27 @@ footer.footer a.icon, footer.footer a.icon img {
           <div class="tab">
             <div>
               <h2>Welcome to the KickStarrTV browser extension documentation. <br />
-              <a href='https://www.eventbrite.com/e/kick-it-live-2023-vegas-tickets-699594896167'>Join us Friday at TwitchCon 2023 for KickItLive2023!</a><br />
+
+<video
+  autoplay
+  loop
+  muted
+  playsinline
+  width="1280"
+  height="612"
+>
+<source
+    src="/streameranalytics-10-15-23.av1.mp4"
+    type="video/mp4; codecs=av01.0.05M.08,opus"
+>
+</video>
+
+<p>&nbsp;</p>
+<iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/qAhxUaAS#zZnuilE5mDO9YcUFaN5Df5-4we6UPDxZx9bI4_9cSfs" allowfullscreen ></iframe>
+<p>&nbsp;</p>
+
+
+
               Press a tab above to learn more. <br />
               We suggest beginners start with Install/Support tab and continue to the right. 
               </h2>
